"date-fns": "^2.0.0-alpha.16"

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "author": "MikaelEdebro <mikael.edebro@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.12",
+    "@vue/test-utils": "^1.0.0-beta.24",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "bili": "^3.1.2",
-    "date-fns": "^1.29.0",
+    "date-fns": "^2.0.0-alpha.16",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-config-standard": "^11.0.0",
